Mon Jul 30 18:54:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/compiler.html:
        * MPC/config/corba_e_compact.mpb:
        * MPC/config/corba_e_micro.mpb:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_interface.cpp:
        * TAO_IDL/be/be_visitor_component/component_sh.cpp:
        * TAO_IDL/be/be_visitor_interface/amh_sh.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_sh.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ss.cpp:
        * TAO_IDL/be_include/be_global.h:
          Added new option -Gce indicating that we are compiling with CORBA/e
          enabled. In that case we don't need to generate the _component
          method in the skeleton which safes footprint. This fixes bugzilla
          issue 2968

Mon Jul 30 18:17:45 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/MonitorControl/NotificationServiceMonitor_i.cpp:

          Explicitly initialize struct members.  There is no constructor for
          IDL generated structs.

Mon Jul 30 18:12:58 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/Bug_2926_Regression/server.cpp:

          Added a missing parameter to the TAO_CosNotify_Service::create()
          method.

Mon Jul 30 14:54:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/POA/*:
        * tests/POA/*:
          Moved all POA examples to tests, this are all one button POA
          tests that we need to run in all core builds

Mon Jul 30 13:13:58 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * MPC/config/notification_mc.mpb:
        * MPC/config/notification_mc_ext.mpb:

          Added base projects for the new noftification service libraries.

        * NEWS:

          Added an entry for this new feature.

        * orbsvcs/Notify_Service/Notify_Service.cpp:

          Updated to provide the factory name during factory creation, the