@@ -95,9 +95,17 @@ namespace TAO
       return *this;
     };
 
+  Transport_Selection_Guard& operator=(const Transport_Selection_Guard& rhs) {
+#if TAO_HAS_TRANSPORT_CURRENT == 1
+    prev_ = rhs.prev_;
+#endif  /* TAO_HAS_TRANSPORT_CURRENT == 1 */
+    curr_ = rhs.curr_;
+    return *this;
+  }
+
+
   private:
     ACE_UNIMPLEMENTED_FUNC (Transport_Selection_Guard (const Transport_Selection_Guard&))
-    ACE_UNIMPLEMENTED_FUNC (Transport_Selection_Guard& operator=(const Transport_Selection_Guard&))
 
 #if TAO_HAS_TRANSPORT_CURRENT == 1
 
